--- a/dev-in-house-game.csproj
+++ b/dev-in-house-game.csproj
@@ -12,6 +12,14 @@
     <None Update="Aventuras\Ruinas Perdidas de Phandelver.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Itens\TextTemplate1.csv">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>TextTemplate1.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
