mexxendo no arquivo

--- a/dev-in-house-game.csproj
+++ b/dev-in-house-game.csproj
@@ -15,6 +15,7 @@
     <None Update="Itens\TextTemplate1.csv">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>TextTemplate1.cs</LastGenOutput>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
