comecando a tornar o fluxo dinamico

--- a/dev-in-house-game.csproj
+++ b/dev-in-house-game.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="Csv\Aventuras\O templo do Dragão das Névoas.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Csv\Aventuras\Ruinas Perdidas de Phandelver.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
